--- a/charts/consul/values.yaml
+++ b/charts/consul/values.yaml
@@ -114,6 +114,11 @@ global:
   # secretKey should be in the form of "key".
   secretsBackend:
     vault:
+      # Vault namespace (optional). This sets the Vault namespace for the `vault.hashicorp.com/namespace` 
+      # agent annotation and [Vault Connect CA namespace](https://developer.hashicorp.com/consul/docs/connect/ca/vault#namespace).
+      # To override one of these values individually, see `agentAnnotations` and `connectCA.additionalConfig`.
+      vaultNamespace: ""
+
       # Enabling the Vault secrets backend will replace Kubernetes secrets with referenced Vault secrets.
       enabled: false
 
@@ -230,7 +235,6 @@ global:
         #   {
         #     "connect": [{
         #       "ca_config": [{
-        #            "namespace": "my-vault-ns",
         #            "leaf_cert_ttl": "36h"
         #         }]
         #     }]
