--- a/charts/consul/templates/telemetry-collector-v2-deployment.yaml
+++ b/charts/consul/templates/telemetry-collector-v2-deployment.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.telemetryCollector.enabled (not (mustHas "resource-apis" .Values.global.experiments)) }}
+{{- if and .Values.telemetryCollector.enabled (mustHas "resource-apis" .Values.global.experiments) }}
 {{- if not .Values.telemetryCollector.image}}{{ fail "telemetryCollector.image must be set to enable consul-telemetry-collector" }}{{ end }}
 {{- if not .Values.connectInject.enabled }}{{ fail "connectInject.enabled must be true" }}{{ end -}}
 {{- if and .Values.global.adminPartitions.enabled (not .Values.global.enableConsulNamespaces) }}{{ fail "global.enableConsulNamespaces must be true if global.adminPartitions.enabled=true" }}{{ end }}
@@ -30,16 +30,15 @@ spec:
   template:
     metadata:
       annotations:
-        "consul.hashicorp.com/connect-inject": "false"
-        # This annotation tells the endpoints controller that this pod was injected even though it wasn't. The
-        # endpoints controller would then sync the endpoint into Consul
-        "consul.hashicorp.com/connect-inject-status": "injected"
+        "consul.hashicorp.com/mesh-inject": "false"
+        # This annotation tells the pod controller that this pod was injected even though it wasn't.
+        # This ensures the pod controller will sync a workload for the pod into Consul
+        "consul.hashicorp.com/mesh-inject-status": "injected"
         # We aren't using tproxy and we don't have an original pod. This would be simpler if we made a path similar
         # to gateways
-        "consul.hashicorp.com/connect-service-port": "metricsserver"
         "consul.hashicorp.com/transparent-proxy": "false"
         "consul.hashicorp.com/transparent-proxy-overwrite-probes": "false"
-        "consul.hashicorp.com/connect-k8s-version": {{ $.Chart.Version }}
+        "consul.hashicorp.com/consul-k8s-version": {{ $.Chart.Version }}
         {{- if .Values.telemetryCollector.customExporterConfig }}
         # configmap checksum
         "consul.hashicorp.com/config-checksum": {{ include (print $.Template.BasePath "/telemetry-collector-configmap.yaml") . | sha256sum }}
@@ -64,7 +63,6 @@ spec:
         {{- end }}
 
       labels:
-        consul.hashicorp.com/connect-inject-managed-by: consul-k8s-endpoints-controller
         app: {{ template "consul.name" . }}
         chart: {{ template "consul.chart" . }}
         release: {{ .Release.Name }}
@@ -77,9 +75,9 @@ spec:
       # to forward metrics to it.
       serviceAccountName: consul-telemetry-collector
       initContainers:
-      # We're manually managing this init container instead of using the connect injector so that we don't run into
-      # any race conditions on the connect-injector deployment or upgrade
-      - name: consul-connect-init
+      # We're manually managing this init container instead of using the mesh injector so that we don't run into
+      # any race conditions on the mesh-injector deployment or upgrade
+      - name: consul-mesh-init
         env:
           - name: POD_NAMESPACE
             valueFrom:
@@ -89,18 +87,12 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.name
-          - name: NODE_NAME
-            valueFrom:
-              fieldRef:
-                fieldPath: spec.nodeName
           {{- if .Values.global.acls.manageSystemACLs }}
           - name: CONSUL_LOGIN_AUTH_METHOD
             value: {{ template "consul.fullname" . }}-k8s-auth-method
           - name: CONSUL_LOGIN_META
             value: "component=consul-telemetry-collector,pod=$(NAMESPACE)/$(POD_NAME)"
           {{- end }}
-          - name: CONSUL_NODE_NAME
-            value: $(NODE_NAME)-virtual
           {{- include "consul.consulK8sConsulServerEnvVars" . | nindent 10 }}
           {{- if .Values.global.enableConsulNamespaces }}
           - name: CONSUL_NAMESPACE
@@ -117,12 +109,9 @@ spec:
           - /bin/sh
           - -ec
           - |-
-            consul-k8s-control-plane connect-init -pod-name=${POD_NAME} -pod-namespace=${POD_NAMESPACE} \
+            consul-k8s-control-plane mesh-init -proxy-name=${POD_NAME} \
               -log-level={{ default .Values.global.logLevel .Values.telemetryCollector.logLevel }} \
-              -log-json={{ .Values.global.logJSON }} \
-              -service-account-name="consul-telemetry-collector" \
-              -service-name="" \
-              -proxy-id-file="/consul/connect-inject/proxyid"
+              -log-json={{ .Values.global.logJSON }} 
 
         image: {{ .Values.global.imageK8S }}
         imagePullPolicy: IfNotPresent
@@ -141,8 +130,8 @@ spec:
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         volumeMounts:
-          - mountPath: /consul/connect-inject
-            name: consul-connect-inject-data
+          - mountPath: /consul/mesh-inject
+            name: consul-mesh-inject-data
             {{- if .Values.global.tls.enabled }}
             {{- if not (or (and .Values.externalServers.enabled .Values.externalServers.useSystemRoots) .Values.global.secretsBackend.vault.enabled) }}
           - name: consul-ca-cert
@@ -262,7 +251,6 @@ spec:
           {{- else }}
           - -grpc-port=8502
           {{- end }}
-          - -proxy-service-id-path=/consul/connect-inject/proxyid
           # tls
           {{- if .Values.global.tls.enabled }}
           {{- if (not (and .Values.externalServers.enabled .Values.externalServers.useSystemRoots)) }}
@@ -321,18 +309,14 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.name
-          - name: NODE_NAME
-            valueFrom:
-              fieldRef:
-                fieldPath: spec.nodeName
+          - name: DP_PROXY_ID
+            value: $(POD_NAME)
           - name: DP_CREDENTIAL_LOGIN_META1
             value: pod=$(NAMESPACE)/$(POD_NAME)
           - name: DP_CREDENTIAL_LOGIN_META2
             value: component=consul-telemetry-collector
-          - name: DP_SERVICE_NODE_NAME
-            value: $(NODE_NAME)-virtual
           - name: TMPDIR
-            value: /consul/connect-inject
+            value: /consul/mesh-inject
         readinessProbe:
           failureThreshold: 3
           initialDelaySeconds: 1
@@ -348,8 +332,8 @@ spec:
           runAsUser: 5995
         # dataplane volume mounts
         volumeMounts:
-          - mountPath: /consul/connect-inject
-            name: consul-connect-inject-data
+          - mountPath: /consul/mesh-inject
+            name: consul-mesh-inject-data
           {{- if .Values.global.tls.enabled }}
           {{- if not (or (and .Values.externalServers.enabled .Values.externalServers.useSystemRoots) .Values.global.secretsBackend.vault.enabled) }}
           - name: consul-ca-cert
@@ -368,7 +352,7 @@ spec:
       volumes:
         - emptyDir:
             medium: Memory
-          name: consul-connect-inject-data
+          name: consul-mesh-inject-data
         {{- if .Values.global.trustedCAs }}
         - name: trusted-cas
           emptyDir:
