[NET-5674] v2: Conditional target port when numeric in k8s (#2978)
v2: Conditional target port when numeric in k8s

When choosing a Consul service TargetPort (name) in the v2 Endpoints
Controller, attempt to find the best match among endpoint container
ports when the K8s service target port value is a number.

This bridges an existing gap between Consul (which always expects a
Workload port to be named), and K8s (where container ports need not be
named, and names are ignored when the K8s service targets by number).

This change will be mostly reverted in a future release once Consul's v2
data model allows for target ports to be a name or number in alignment
w/ K8s behavior.

--- a/acceptance/tests/fixtures/bases/v2-multiport-app/deployment.yaml
+++ b/acceptance/tests/fixtures/bases/v2-multiport-app/deployment.yaml
@@ -56,6 +56,8 @@ spec:
             - -listen=:9090
           ports:
             - containerPort: 9090
+              # This name is meant to be used alongside the _numeric_ K8s service target port
+              # to verify that we can still route traffic to the named port when there's a mismatch.
               name: admin
 # TODO: (v2/nitya) add these probes back when expose paths and L7 are supported.
 #          livenessProbe:
