Enable GW JWT Tests (#3097)
* kind of running

* WIP

* Unskip test and setup so it works correctly

* revert typo

* Move tokens into constants

* Adds test scenario for adding a second gateway policy to a gateway, should and will fail

* linter

* Add case for multiple routes on listener with only one defining JWT
configuration

* Multiple routes referencing the same external ref

* Add check for route referencing route extension outside of local
namespace failing

---------

Co-authored-by: Melisa Griffin <melisa.griffin@hashicorp.com>

--- a/acceptance/tests/fixtures/cases/api-gateways/jwt-auth/external-ref-other-ns.yaml
+++ b/acceptance/tests/fixtures/cases/api-gateways/jwt-auth/external-ref-other-ns.yaml
@@ -4,7 +4,8 @@
 apiVersion: consul.hashicorp.com/v1alpha1
 kind: RouteAuthFilter
 metadata:
-  name: route-jwt-auth-filter
+  name: route-jwt-auth-filter-other
+  namespace: other
 spec:
   jwt:
     providers:
