--- a/acceptance/tests/fixtures/cases/api-gateways/jwt-auth/extraGatewayPolicy/extra-gateway-policy.yaml
+++ b/acceptance/tests/fixtures/cases/api-gateways/jwt-auth/extraGatewayPolicy/extra-gateway-policy.yaml
@@ -1,10 +1,10 @@
 # Copyright (c) HashiCorp, Inc.
 # SPDX-License-Identifier: MPL-2.0
-
+# This is used to show that a gateway cannot have more than one gateway policy attached to it
 apiVersion: consul.hashicorp.com/v1alpha1
 kind: GatewayPolicy
 metadata:
-  name: my-policy
+  name: bad-policy
 spec:
   targetRef:
     name: gateway
