--- a/acceptance/tests/fixtures/cases/api-gateways/jwt-auth/api-gateway.yaml
+++ b/acceptance/tests/fixtures/cases/api-gateways/jwt-auth/api-gateway.yaml
@@ -9,8 +9,14 @@ spec:
   gatewayClassName: gateway-class
   listeners:
   - protocol: HTTP
-    port: 8080
+    port: 8081
     name: http-auth
+    allowedRoutes:
+      namespaces:
+        from: "All"
+  - protocol: HTTP
+    port: 8082
+    name: http-invalid-attach
     allowedRoutes:
       namespaces:
         from: "All"
