--- a/acceptance/tests/fixtures/cases/api-gateways/jwt-auth/httproute-invalid-external-ref.yaml
+++ b/acceptance/tests/fixtures/cases/api-gateways/jwt-auth/httproute-invalid-external-ref.yaml
@@ -4,11 +4,11 @@
 apiVersion: gateway.networking.k8s.io/v1beta1
 kind: HTTPRoute
 metadata:
-  name: http-route-auth
+  name: http-route-auth-invalid
 spec:
   parentRefs:
   - name: gateway
-    sectionName: http-auth
+    sectionName: http-invalid-attach
   rules:
     - matches:
       - path:
@@ -22,7 +22,7 @@ spec:
         extensionRef:
           group: consul.hashicorp.com
           kind: RouteAuthFilter
-          name: route-jwt-auth-filter
+          name: route-jwt-auth-filter-other
     - matches:
       - path:
           type: PathPrefix
