--- a/acceptance/tests/fixtures/cases/api-gateways/jwt-auth/httproute-no-auth-on-auth-listener.yaml
+++ b/acceptance/tests/fixtures/cases/api-gateways/jwt-auth/httproute-no-auth-on-auth-listener.yaml
@@ -4,7 +4,7 @@
 apiVersion: gateway.networking.k8s.io/v1beta1
 kind: HTTPRoute
 metadata:
-  name: http-route-auth
+  name: http-route-no-auth-on-auth-listener
 spec:
   parentRefs:
   - name: gateway
@@ -13,20 +13,14 @@ spec:
     - matches:
       - path:
           type: PathPrefix
-          value: "/admin"
+          value: "/admin-no-auth"
       backendRefs:
         - name: static-server
           port: 8080
-      filters:
-      - type: ExtensionRef
-        extensionRef:
-          group: consul.hashicorp.com
-          kind: RouteAuthFilter
-          name: route-jwt-auth-filter
     - matches:
       - path:
           type: PathPrefix
-          value: "/pet"
+          value: "/pet-no-auth"
       backendRefs:
         - name: static-server
           port: 8080
