--- a/acceptance/tests/fixtures/cases/api-gateways/jwt-auth/httproute2-auth.yaml
+++ b/acceptance/tests/fixtures/cases/api-gateways/jwt-auth/httproute2-auth.yaml
@@ -4,7 +4,7 @@
 apiVersion: gateway.networking.k8s.io/v1beta1
 kind: HTTPRoute
 metadata:
-  name: http-route-auth
+  name: http-route2-auth
 spec:
   parentRefs:
   - name: gateway
@@ -13,7 +13,7 @@ spec:
     - matches:
       - path:
           type: PathPrefix
-          value: "/admin"
+          value: "/admin-2"
       backendRefs:
         - name: static-server
           port: 8080
@@ -26,7 +26,7 @@ spec:
     - matches:
       - path:
           type: PathPrefix
-          value: "/pet"
+          value: "/pet-2"
       backendRefs:
         - name: static-server
           port: 8080
