--- a/acceptance/tests/fixtures/cases/api-gateways/jwt-auth/kustomization.yaml
+++ b/acceptance/tests/fixtures/cases/api-gateways/jwt-auth/kustomization.yaml
@@ -1,14 +1,20 @@
 # Copyright (c) HashiCorp, Inc.
 # SPDX-License-Identifier: MPL-2.0
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 
 resources:
 - ../../../bases/api-gateway
 - ../../static-server-inject
-- ./httproute.yaml
-- ./jwt-provider.yaml
+- httproute-auth.yaml
+- httproute-invalid-external-ref.yaml
+- httproute2-auth.yaml
+- httproute-no-auth-on-auth-listener.yaml
+- jwt-provider.yaml
+- jwt-route-filter.yaml
+- gateway-policy.yaml
 
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
+
 patches:
-- patch: httproute-no-auth.yaml
+- path: httproute.yaml
 - path: api-gateway.yaml
