[CC 5965] Improve HCP Observability E2E tests and add periodic tests (#2946)
* Setup observability metrics tests

* Cleanup http_client.go and observability_test.go

* Refactor tests by using table driven approach

* Refactor and add comments to the client

* Remove param to token function

* remove consul export test redundant

* Remove hardcoded collector image

* Move metrics validation from server to consul-k8s tests and update to use the /records endpoint

* Change to achooo docker hub and fix lint errors

--- a/acceptance/tests/fixtures/bases/cloud/hcp-mock/deployment.yaml
+++ b/acceptance/tests/fixtures/bases/cloud/hcp-mock/deployment.yaml
@@ -19,7 +19,7 @@ spec:
       containers:
         - name: fake-server
           # TODO: move this to a hashicorp mirror
-          image: docker.io/chaapppie/fakeserver:latest
+          image: docker.io/achooo/fakeserver:latest
           ports:
             - containerPort: 443
               name: https
