Add validation to account for type change (#3202)
add validation to account for type change

--- a/control-plane/config/crd/bases/consul.hashicorp.com_routetimeoutfilters.yaml
+++ b/control-plane/config/crd/bases/consul.hashicorp.com_routetimeoutfilters.yaml
@@ -51,8 +51,10 @@ spec:
             description: RouteTimeoutFilterSpec defines the desired state of RouteTimeoutFilter.
             properties:
               idleTimeout:
+                format: duration
                 type: string
               requestTimeout:
+                format: duration
                 type: string
             type: object
           status:
